#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-13-23
2016-6-13  David Schneider
- extend method_domain feature to get domain from method to support
  Partition::ConfigV2 - JIRA PSAS-241

Tag: V00-13-22
2016-4-14 David Schneider
- extend method_domain feature to get domain from attribute to support
  Generic1D::ConfigV0 - JIRA PSAS-225	

Tag: V00-13-21
2016-4-14 David Schneider
- add method_domain tag to hdf5 backend to generate code to tranlsate a
  dataset from a method. JIRA PSAS-227
- write the inc and cpp files unbuffered to ease debugging.
- add -l=3 (or 2,1) option to wrapper scripts to pass on loggin level to psddlc
	
Tag: V00-13-20
2016-4-4 David Schneider
- add -s --show option to dll gen scripts to see list of standard excludes.
- don't allow [[value_type]] and [[config(X)]] tag combos, 
  unless DDL_FORCE=1 set in environment, JIRA PSAS-223

Tag: V00-13-19
2016-1-12 David Schneider
- switch to safe access to list of object data members in pds2psana backend,
  JIRA PSAS-208
	
Tag: V00-13-18
2015-5-28 David
- When running the ddl compiler and the -d switch to include devel types has
  not been given, skip a type in the config list if it is a DEVEL type.
  update to JIRA Issue PSAS-42

Tag: V00-13-17
2015-2-4 David Schneider
- update ddl wrapper common code. No need to update DAQ. JIRA issue PSAS-103
- fix this changelog, somehow tags are out of sync
	
Tag: V00-13-14
2015-2-03 David Schneider
- add Python library to use for analysis release wrapper scripts.
  No change to compiler or need for DAQ to update package.
- See JIRA issue PSAS-103

Tag: V00-13-13
2014-10-09 David